monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/ReplaceKeyword.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar ReplaceKeyword {

  P = "a" un:"b" "c"* cg:["cg"];

  replacekeyword "a" : "a", "aa";
  replacekeyword "c" : "c", "cc";

 
}
