monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4033/a4033.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4033;

grammar a4033 {
  a = "a";

}
